tests/build/cases/widget_new/missing_semi1.stderr
error: expected `;`
  --> cases/widget_new/missing_semi1.rs:10:9
   |
10 |         enabled = true;
   |         ^^^^^^^
